HP-2008-11-21-0: Bugfix:     Now the worker.exe for the qsub test on Windows
                             loads one CPU with at least 95% and works for the 
                             requested time +30 ms/-0 ms.
                 Changed:    checktree/system_tests/clients/qsub/worker.exe
                 Review:     MD

CR-2008-11-21-0: Cleanup:    o Fixed minor TS framework issues
                             o Performance enhancements for remote calls
                             o Simplified scripts/file_check.sh
                 Review:     JG 

TB-2008-11-21-0: Bugfix:     o fixed Hedeby test issues/issue_374: was testing
                               persistence behavior (order store) of RP which
                               is not implemented => now tests issue described
                               in IZ#374
                 Cleanup:    o cleanup of above test
                 Review:     MG

MB-2008-11-21-0: Enahncem.:  test for hedeby IZ#554:
                             checktree_hedeby/checktree/issues/issue_554
                 Review   :  MG

DG-2008-11-20-0: Cleanup:    Typo fix in execd installation made testsuite 
                             update neccessary.   
                 Review:     JG

JG-2008-11-20-1: Bugfix:     installation with qmaster jmx server broken
                             by JG-2008-11-20-0
                 Review:     CR

TB-2008-11-20-0: Bugfix:     o some calling code of the wait_for_XXX hedeby
                               functions relied on their silent initialization
                               of the error_text variable
                 Belongs to: TB-2008-11-19-0
                 Cleanup:    Used sdmadm_command_opt in:
                             o util/produce_inprocess_resource()
                             o util/produce_ambiguous_resource()
                             o util/produce_unassigning_resource()
                             o util/reset_produced_inprocess_resource()